fix spacing

--- a/assets/src/styles/modules/_home.scss
+++ b/assets/src/styles/modules/_home.scss
@@ -95,10 +95,6 @@
       backdrop-filter: blur(2px);
       -webkit-backdrop-filter: blur(2px);
     }
-
-    &:last-child .illustrator-meta-container {
-      margin-left: -20%;
-    }
   }
 
   &.bubble-default .bricklayer-column .illustrator-meta-container {
